--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,9 @@ uuid = "c13076dc-bdcd-48ba-bc88-4b44c2587ab3"
 authors = ["Ilan Coulon", "Félix Chalumeau"]
 version = "0.1.0"
 
+[deps]
+DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
+
 [compat]
 julia = "1.4"
 
