--- a/Project.toml
+++ b/Project.toml
@@ -20,8 +20,10 @@ ReinforcementLearningZoo = "d607f57d-ee1e-4ba7-bcf2-7734c1e31854"
 Setfield = "efcf1570-3423-57d1-acb7-fd33fddbac46"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
+GeometricFlux = "0.5.2"
 julia = "1.4"
 ReinforcementLearningZoo = "0.1.0"
 
