--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
 language: julia
 julia:
   - 1.4
+
+script: travis_wait julia --check-bounds=yes --color=yes -e "if VERSION < v\"0.7.0-DEV.5183\"; Pkg.test(\"${JL_PKG}\", coverage=true); else using Pkg; Pkg.test(coverage=true); end"
