Travis test separate script

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: julia
 julia:
   - 1.4
 
-after_script: travis_wait julia --check-bounds=yes --color=yes -e "if VERSION < v\"0.7.0-DEV.5183\"; Pkg.test(\"${JL_PKG}\", coverage=true); else using Pkg; Pkg.test(coverage=true); end"
+script: ./travis_test.sh
