--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "CPRL"
+name = "SeaPearl"
 uuid = "c13076dc-bdcd-48ba-bc88-4b44c2587ab3"
 authors = ["Ilan Coulon", "Félix Chalumeau"]
 version = "0.1.0"
