--- a/Project.toml
+++ b/Project.toml
@@ -24,6 +24,16 @@ SimpleWeightedGraphs = "47aef6b3-ad0c-573a-a1e2-d07658019622"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
+[compat]
+GeometricFlux = "0.7.4"
+ReinforcementLearning = "0.7.0"
+ReinforcementLearningBase = "0.8.5"
+ReinforcementLearningCore = "0.5.0"
+ReinforcementLearningZoo = "0.2.1"
+SimpleWeightedGraphs = "1.1.1"
+Zygote = "~0.5"
+julia = "1.4, 1.5"
+
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
