Add LinearAlgebra dep

--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ GeometricFlux = "7e08b658-56d3-11e9-2997-919d5b31e4ea"
 GraphSignals = "3ebe565e-a4b5-49c6-aed2-300248c3a9c1"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
 ProgressBars = "49802e3a-d2f1-5c88-81d8-b72133a6f568"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
@@ -30,11 +31,11 @@ Distributions = "0.24"
 Documenter = "0.26"
 Flux = "0.11"
 GeometricFlux = "0.7.4"
-JuMP = "0.21"
-ProgressBars = "0.8"
 GraphSignals = "0.1"
+JuMP = "0.21"
 LightGraphs = "1.3"
 MathOptInterface = "0.9"
+ProgressBars = "0.8"
 ReinforcementLearning = "0.7.0"
 ReinforcementLearningBase = "0.8.5, 0.9"
 ReinforcementLearningCore = "0.5.0, 0.6"
