--- a/Project.toml
+++ b/Project.toml
@@ -36,14 +36,14 @@ JuMP = "0.21"
 LightGraphs = "1.3"
 MathOptInterface = "0.9"
 ProgressBars = "0.8"
-ReinforcementLearning = "0.7.0, 0.8"
-ReinforcementLearningBase = "0.8.5, 0.9"
-ReinforcementLearningCore = "0.5.0, 0.6, 0.7"
-ReinforcementLearningZoo = "0.2.1, 0.3"
+ReinforcementLearning = "0.8"
+ReinforcementLearningBase = "0.9"
+ReinforcementLearningCore = "0.7"
+ReinforcementLearningZoo = "0.3"
 Setfield = "0.7"
 SimpleWeightedGraphs = "1.1.1"
 Zygote = "~0.5, 0.6"
-julia = "1.4, 1.5"
+julia = "1.6"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
