--- a/Project.toml
+++ b/Project.toml
@@ -18,9 +18,6 @@ MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
 ProgressBars = "49802e3a-d2f1-5c88-81d8-b72133a6f568"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 ReinforcementLearning = "158674fc-8238-5cab-b5ba-03dfc80d1318"
-ReinforcementLearningBase = "e575027e-6cd6-5018-9292-cdc6200d2b44"
-ReinforcementLearningCore = "de1b191a-4ae0-4afa-a27b-92d07f46b2d6"
-ReinforcementLearningZoo = "d607f57d-ee1e-4ba7-bcf2-7734c1e31854"
 Setfield = "efcf1570-3423-57d1-acb7-fd33fddbac46"
 SimpleWeightedGraphs = "47aef6b3-ad0c-573a-a1e2-d07658019622"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
@@ -31,16 +28,13 @@ DataStructures = "0.18"
 Distributions = "0.24, 0.25"
 Documenter = "0.26"
 Flux = "0.11, 0.12"
-GeometricFlux = "0.7.4"
-GraphSignals = "0.1"
+GeometricFlux = "0.7"
+GraphSignals = "0.1 - 0.2"
 JuMP = "0.21"
 LightGraphs = "1.3"
 MathOptInterface = "0.9"
 ProgressBars = "0.8, 1.0"
-ReinforcementLearning = "0.8"
-ReinforcementLearningBase = "0.9"
-ReinforcementLearningCore = "0.7"
-ReinforcementLearningZoo = "0.3"
+ReinforcementLearning = "0.8, 0.9"
 Setfield = "0.7"
 SimpleWeightedGraphs = "1.1.1"
 Zygote = "~0.5, 0.6"
