--- a/Project.toml
+++ b/Project.toml
@@ -35,16 +35,16 @@ Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
 DataStructures = "0.18"
-Distributions = "0.24, 0.25"
-Documenter = "0.26"
-Flux = "0.11, 0.12"
+Distributions = "0.24 - 0.25"
+Documenter = "0.26 - 0.27"
+Flux = "0.11 - 0.12"
 GeometricFlux = "0.7"
 GraphSignals = "0.1 - 0.2"
 JuMP = "0.21"
 LightGraphs = "1.3"
 MathOptInterface = "0.9"
-ProgressBars = "0.8, 1.0"
-ReinforcementLearning = "0.8, 0.9"
+ProgressBars = "0.8 - 1.0"
+ReinforcementLearning = "0.8 - 0.9"
 Setfield = "0.7"
 SimpleWeightedGraphs = "1.1.1"
 Zygote = "~0.5, 0.6"
