fixed test to fit new format

--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,11 @@ authors = ["Ilan Coulon", "Félix Chalumeau"]
 version = "0.2.0"
 
 [deps]
+BSON = "fbb218c0-5317-5bc6-957e-2ee96dd4b1f0"
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
+CUDAKernels = "72cfdca4-0801-4ab0-bf6a-d52aa10adc57"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
@@ -39,7 +43,7 @@ GraphSignals = "0.1 - 0.2"
 JuMP = "0.21"
 LightGraphs = "1.3"
 MathOptInterface = "0.9"
-ProgressBars = "0.8 - 1.0"
+ProgressBars = "0.8 - 1.2"
 ReinforcementLearning = "0.8 - 0.9"
 Setfield = "0.7"
 SimpleWeightedGraphs = "1.1.1"
