--- a/Project.toml
+++ b/Project.toml
@@ -28,7 +28,7 @@ Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
 CUDA = "2 - 3"
-CUDAKernels = "0.2"
+CUDAKernels = "0.1 - 0.2"
 DataStructures = "0.18"
 Distributions = "0.24 - 0.25"
 Flux = "0.11 - 0.12"
