--- a/Project.toml
+++ b/Project.toml
@@ -36,7 +36,7 @@ Flux = "0.11 - 0.12"
 GeometricFlux = "0.7.6"
 GraphSignals = "0.1 - 0.2"
 JuMP = "0.21"
-KernelAbstractions = "0.6, 0.7"
+KernelAbstractions = "0.6 - 0.7"
 LightGraphs = "1.3"
 MathOptInterface = "0.9"
 NNlib = "0.7"
