--- a/Project.toml
+++ b/Project.toml
@@ -40,7 +40,7 @@ KernelAbstractions = "0.6 - 0.7"
 LightGraphs = "1.3"
 MathOptInterface = "0.9"
 NNlib = "0.7"
-ProgressBars = "0.8 - 1.0, 1"
+ProgressBars = "1"
 ReinforcementLearning = "0.8 - 0.9"
 RollingFunctions = "0.6"
 SimpleWeightedGraphs = "1.1"
