--- a/Project.toml
+++ b/Project.toml
@@ -17,6 +17,7 @@ NNlib = "872c559c-99b0-510c-b3b7-b6c96a88d5cd"
 ProgressBars = "49802e3a-d2f1-5c88-81d8-b72133a6f568"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 ReinforcementLearning = "158674fc-8238-5cab-b5ba-03dfc80d1318"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 RollingFunctions = "b0e4dd01-7b14-53d8-9b45-175a3e362653"
 SimpleWeightedGraphs = "47aef6b3-ad0c-573a-a1e2-d07658019622"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
@@ -36,7 +37,6 @@ ProgressBars = "1"
 ReinforcementLearning = "0.8 - 0.9"
 RollingFunctions = "0.6"
 SimpleWeightedGraphs = "1.1"
-Zygote = "~0.5, 0.6"
 julia = "1.6"
 
 [extras]
