--- a/Project.toml
+++ b/Project.toml
@@ -38,6 +38,7 @@ ReinforcementLearning = "0.8 - 0.9"
 RollingFunctions = "0.6"
 SimpleWeightedGraphs = "1.1"
 julia = "1.6"
+Zygote = "6 - 6.2.4"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
