--- a/Project.toml
+++ b/Project.toml
@@ -33,11 +33,11 @@ LightGraphs = "1.3"
 MathOptInterface = "0.9"
 NNlib = "0.7"
 ProgressBars = "1"
+ReinforcementLearning = "0.10"
 RollingFunctions = "0.6"
 SimpleWeightedGraphs = "1.1"
-ReinforcementLearning = "0.10"
 Zygote = "0.6.26"
-julia = "1.6"
+julia = "1.6 - 1.7"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
