added missing compatibilities for packages

--- a/Project.toml
+++ b/Project.toml
@@ -35,19 +35,29 @@ TensorBoardLogger = "899adc3e-224a-11e9-021f-63837185c80f"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
+Cairo = "0 - 2"
+Compose = "0 - 1"
 CUDA = "2 - 3"
 DataStructures = "0.18"
 Distributions = "0.24 - 0.25"
 FillArrays = "0.11 - 0.12"
 Flux = "0.11 - 0.12"
+GraphPlot = "0 - 1"
+Graphs = "1 - 2"
 JuMP = "0.21"
+KernelAbstractions = "0 - 1"
 LightGraphs = "1.3"
 MathOptInterface = "0.9"
 NNlib = "0.8.4"
+Plots = "1 - 2"
 ProgressBars = "1"
 ReinforcementLearning = "0.10"
+Revise = "1 - 4"
 RollingFunctions = "0.6"
 SimpleWeightedGraphs = "1.1"
+StatsBase = "0 - 1"
+Suppressor = "0 - 1"
+TensorBoardLogger = "0 - 1"
 Zygote = "0.6.26"
 julia = "1.6 - 1.7"
 
