--- a/Project.toml
+++ b/Project.toml
@@ -36,16 +36,16 @@ Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
 Cairo = "^1"
-Compose = "<=0.9.2"
+Compose = "< 0.9.2"
 CUDA = "2 - 3"
 DataStructures = "0.18"
 Distributions = "0.24 - 0.25"
 FillArrays = "0.11 - 0.12"
 Flux = "0.11 - 0.12"
-GraphPlot = "<=0.4.4"
+GraphPlot = "< 0.4.4"
 Graphs = "1 - 2"
 JuMP = "0.21"
-KernelAbstractions = "<=0.8.4"
+KernelAbstractions = "< 0.8.4"
 LightGraphs = "1.3"
 MathOptInterface = "0.9"
 NNlib = "0.8.4"
@@ -55,9 +55,9 @@ ReinforcementLearning = "0.10"
 Revise = "1 - 4"
 RollingFunctions = "0.6"
 SimpleWeightedGraphs = "1.1"
-StatsBase = "<=0.33.21"
-Suppressor = "<=0.2.0"
-TensorBoardLogger = "<=0.1.19"
+StatsBase = "< 0.33.21"
+Suppressor = "< 0.2.0"
+TensorBoardLogger = "< 0.1.19"
 Zygote = "0.6.26"
 julia = "1.6 - 1.7"
 
