--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "SeaPearl"
 uuid = "c13076dc-bdcd-48ba-bc88-4b44c2587ab3"
 authors = ["Ilan Coulon", "Félix Chalumeau", "Tom Marty", "Tom Sander", "Pierre Tessier"]
-version = "0.4.1"
+version = "0.4.2"
 
 [deps]
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
@@ -59,7 +59,7 @@ StatsBase = "< 0.33.21"
 Suppressor = "< 0.2.0"
 TensorBoardLogger = "< 0.1.19"
 Zygote = "0.6.26"
-julia = "1.6 - 1.7"
+julia = ">=1.6"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
