--- a/Project.toml
+++ b/Project.toml
@@ -38,7 +38,7 @@ Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 Cairo = "^1"
 Compose = "< 0.9.2"
 CUDA = "2 - 3"
-DataStructures = "0.18"
+DataStructures = "0.15.0 - 0.18.13"
 Distributions = "0.24 - 0.25"
 FillArrays = "0.11 - 0.12"
 Flux = "0.11 - 0.12"
