--- a/Project.toml
+++ b/Project.toml
@@ -56,7 +56,7 @@ Revise = "1 - 4"
 RollingFunctions = "0.6"
 SimpleWeightedGraphs = "1.1"
 StatsBase = "< 0.33.21"
-Suppressor = "< 0.2.0"
+Suppressor = ">= 0.1.0"
 TensorBoardLogger = "< 0.1.19"
 Zygote = "0.6.26"
 julia = ">=1.6"
