--- a/Project.toml
+++ b/Project.toml
@@ -42,8 +42,8 @@ DataStructures = "0.15.0 - 0.18.13"
 Distributions = "0.24 - 0.25"
 FillArrays = "0.11 - 0.12"
 Flux = "0.11 - 0.12"
-GraphPlot = ">= 0.1.0"
-Graphs = ">= 0.1"
+GraphPlot = "0.1.0 - 0.4.4"
+Graphs = "0.1 - 1.7.4"
 JuMP = "0.21"
 KernelAbstractions = "< 0.8.4"
 LightGraphs = "1.3"
@@ -56,7 +56,7 @@ Revise = "1 - 4"
 RollingFunctions = "0.6"
 SimpleWeightedGraphs = "1.1"
 StatsBase = "< 0.33.21"
-Suppressor = ">= 0.1.0"
+Suppressor = "0.1.0 - 0.2.0"
 TensorBoardLogger = "< 0.1.19"
 Zygote = "0.6.26"
 julia = ">=1.6"
