--- a/Project.toml
+++ b/Project.toml
@@ -43,7 +43,7 @@ Distributions = "0.24 - 0.25"
 FillArrays = "0.11 - 0.12"
 Flux = "0.11 - 0.12"
 GraphPlot = "0.1.0 - 0.4.4"
-Graphs = "0.1 - 1.7.4"
+Graphs = "< 1.7.5"
 JuMP = "0.21"
 KernelAbstractions = "< 0.8.4"
 LightGraphs = "1.3"
