--- a/Project.toml
+++ b/Project.toml
@@ -59,7 +59,7 @@ StatsBase = "< 0.33.21"
 Suppressor = "0.1.0 - 0.2.0"
 TensorBoardLogger = "< 0.1.19"
 Zygote = "0.6.26"
-julia = ">=1.6"
+julia = "1.6 - 1.7"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
