--- a/Project.toml
+++ b/Project.toml
@@ -28,8 +28,8 @@ ReinforcementLearning = "158674fc-8238-5cab-b5ba-03dfc80d1318"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 RollingFunctions = "b0e4dd01-7b14-53d8-9b45-175a3e362653"
 SimpleWeightedGraphs = "47aef6b3-ad0c-573a-a1e2-d07658019622"
-Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Suppressor = "fd094767-a336-5f1f-9728-57cf17d0bbfb"
 TensorBoardLogger = "899adc3e-224a-11e9-021f-63837185c80f"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
@@ -59,7 +59,7 @@ StatsBase = "< 0.33.21"
 Suppressor = "0.1.0 - 0.2.0"
 TensorBoardLogger = "< 0.1.19"
 Zygote = "0.6.26"
-julia = "1.6 - 1.7"
+julia = ">= 1.6"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
