Tentative change to avoid duplicating pipeline run (#280)
* Tentative change to avoid duplicating pipeline run

* Removed tests for julia 1.6

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,18 @@
 name: Run Julia tests
 
-on: [push, pull_request]
-
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 jobs:
   test:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        julia-version: ['1.6', '1.7']
+        julia-version: ['1.7']
         julia-arch: [x64]
         os: [ubuntu-latest]
 
