--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "0.4.1"
 [deps]
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 Cairo = "159f3aea-2a34-519c-b102-8c37f9878175"
+ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
 Compose = "a81c6b42-2e10-5240-aca2-a61377ecd94b"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
@@ -36,6 +37,7 @@ Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
 Cairo = "^1"
+ChainRulesCore = "0.8 - 1.15.6"
 Compose = "< 0.9.2"
 CUDA = "2 - 3"
 DataStructures = "0.15.0 - 0.18.13"
