--- a/Project.toml
+++ b/Project.toml
@@ -29,17 +29,18 @@ ReinforcementLearning = "158674fc-8238-5cab-b5ba-03dfc80d1318"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 RollingFunctions = "b0e4dd01-7b14-53d8-9b45-175a3e362653"
 SimpleWeightedGraphs = "47aef6b3-ad0c-573a-a1e2-d07658019622"
-StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Suppressor = "fd094767-a336-5f1f-9728-57cf17d0bbfb"
 TensorBoardLogger = "899adc3e-224a-11e9-021f-63837185c80f"
+XML = "72c71f33-b9b6-44de-8c94-c961784809e2"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
+CUDA = "2 - 3"
 Cairo = "^1"
 ChainRulesCore = "1.0 - 1.15.6"
 Compose = "< 0.9.2"
-CUDA = "2 - 3"
 DataStructures = "0.15.0 - 0.18.13"
 Distributions = "0.24 - 0.25"
 FillArrays = "0.11 - 0.12"
