--- a/.gitignore
+++ b/.gitignore
@@ -6,14 +6,12 @@
 /Manifest.toml
 /instancesXCSP22/
 
-/test/runtests.jl
-
 # Test files for navaxel
 /test_julia_axel.ipynb
 /test/test_learning_cp.jl
 
 # Test files for Max9294D
 /test_julia_max.ipynb
-/test_julia_max_copy.ipynb
+/test_julia_max copy.ipynb
 
 
