Add new contributors

--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "SeaPearl"
 uuid = "c13076dc-bdcd-48ba-bc88-4b44c2587ab3"
-authors = ["Léo Boisvert", "Ilan Coulon", "Félix Chalumeau", "Tom Marty", "Tom Sander", "Pierre Tessier"]
-version = "0.5.3"
+authors = ["Léo Boisvert", "Ilan Coulon", "Félix Chalumeau", "Tom Marty", "Tom Sander", "Pierre Tessier", "Axel Navarro", "Max Bourgeat"]
+version = "0.4.3"
 
 [deps]
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
