Fix variable parsing (#343)
* fix variable parsing, add missing dependencies

* Add new contributors

--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "SeaPearl"
 uuid = "c13076dc-bdcd-48ba-bc88-4b44c2587ab3"
-authors = ["Léo Boisvert", "Ilan Coulon", "Félix Chalumeau", "Tom Marty", "Tom Sander", "Pierre Tessier"]
+authors = ["Léo Boisvert", "Ilan Coulon", "Félix Chalumeau", "Tom Marty", "Tom Sander", "Pierre Tessier", "Axel Navarro", "Max Bourgeat"]
 version = "0.4.3"
 
 [deps]
@@ -61,6 +61,7 @@ SimpleWeightedGraphs = "1.1"
 StatsBase = "< 0.33.21"
 Suppressor = "0.1.0 - 0.2.0"
 TensorBoardLogger = "< 0.1.19"
+XML = "0.2.0"
 Zygote = "0.6.26"
 julia = "1.7"
 
