--- a/Project.toml
+++ b/Project.toml
@@ -38,6 +38,7 @@ XML = "72c71f33-b9b6-44de-8c94-c961784809e2"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
+ArgParse = "1.1.4"
 CUDA = "2 - 3"
 Cairo = "^1"
 ChainRulesCore = "1.0 - 1.15.6"
