--- a/Project.toml
+++ b/Project.toml
@@ -55,7 +55,7 @@ Suppressor = "0.1.0 - 0.2.0"
 TensorBoardLogger = "< 0.1.19"
 XML = "0.2.0"
 Zygote = "0.6.26"
-julia = "1.8"
+julia = "1.8 - 1.9"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
