--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 # Test files for navaxel
 /test_julia_axel.ipynb
 /test/test_learning_cp.jl
+/convert_lzma.ipynb
 
 # Test files for Max9294D
 /test_julia_max.ipynb
