--- a/Project.toml
+++ b/Project.toml
@@ -36,9 +36,12 @@ Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
 ArgParse = "1.1.4"
-CUDA = "2 - 3"
+
 ChainRulesCore = "1.0 - 1.15.6"
 Compose = "< 0.9.2"
+CUDA = "2 - 3"
+CSV = "0.8 - 0.10"
+DataFrames = "1"
 DataStructures = "0.15.0 - 0.18.13"
 Distributions = "0.24 - 0.25"
 FillArrays = "0.11 - 0.12"
