--- a/.github/workflows/scheduled-tests.yml
+++ b/.github/workflows/scheduled-tests.yml
@@ -1,11 +1,8 @@
 name: Weekly Workflow
 
 on:
-  # schedule:
-  #   - cron: '0 23 * * 5' # Every Friday at 11 PM
-  pull_request:
-    branches:
-      - master
+  schedule:
+    - cron: '0 23 * * 5' # Every Friday at 11 PM
 
 jobs:
   build-and-test:
@@ -61,7 +58,7 @@ jobs:
                 # Process the XML file (replace with your desired command)
                 echo "Processing $xml_file"
                 # Run the Julia file and handle any errors
-                julia --project src/argparse_setting.jl -b "$xml_file" -t 1 |& tee -a test_output.txt
+                julia --project src/argparse_setting.jl -b "$xml_file" -t 900 |& tee -a test_output.txt
                 exit_code=$?
 
                 if [ $exit_code -ne 0 ]; then
