--- a/Project.toml
+++ b/Project.toml
@@ -15,6 +15,7 @@ Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 FillArrays = "1a297f60-69ca-5386-bcde-b61e274b549b"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
+JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 KernelAbstractions = "63c18a36-062a-441e-b654-da1e3ab1ce7c"
 LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
@@ -36,11 +37,10 @@ Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
 ArgParse = "1.1.4"
-
+CSV = "0.8 - 0.10"
+CUDA = "2 - 3"
 ChainRulesCore = "1.0 - 1.15.6"
 Compose = "< 0.9.2"
-CUDA = "2 - 3"
-CSV = "0.8 - 0.10"
 DataFrames = "1"
 DataStructures = "0.15.0 - 0.18.13"
 Distributions = "0.24 - 0.25"
@@ -61,6 +61,7 @@ TensorBoardLogger = "< 0.1.19"
 XML = "0.2.0"
 Zygote = "0.6.26"
 julia = "1.8 - 1.9"
+JSON = "0.21.4"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
