--- a/Project.toml
+++ b/Project.toml
@@ -39,19 +39,19 @@ ArgParse = "1.1.4"
 
 ChainRulesCore = "1.0 - 1.15.6"
 Compose = "< 0.9.2"
-CUDA = "2 - 4"
+CUDA = "2 - 3"
 CSV = "0.8 - 0.10"
 DataFrames = "1"
 DataStructures = "0.15.0 - 0.18.13"
 Distributions = "0.24 - 0.25"
-FillArrays = "0.11 - 1.3"
-Flux = "0.11 - 0.13"
+FillArrays = "0.11 - 0.12"
+Flux = "0.11 - 0.12"
 Graphs = "1 - 1.7.4"
 KernelAbstractions = "< 0.8.4"
 LightGraphs = "1.3"
 NNlib = "0.8.4"
 ProgressBars = "1"
-ReinforcementLearning = "0.10 - 0.11"
+ReinforcementLearning = "0.10"
 Revise = "1 - 4"
 RollingFunctions = "0.6"
 SimpleWeightedGraphs = "1.1"
