--- a/Project.toml
+++ b/Project.toml
@@ -47,13 +47,14 @@ Distributions = "0.24 - 0.25"
 FillArrays = "0.11 - 0.12"
 Flux = "0.11 - 0.12"
 Graphs = "1 - 1.7.4"
+JSON = "0.21.4"
 KernelAbstractions = "< 0.8.4"
 LightGraphs = "1.3"
 NNlib = "0.8.4"
 ProgressBars = "1"
 ReinforcementLearning = "0.10"
 Revise = "1 - 4"
-RollingFunctions = "0.6"
+RollingFunctions = "0.6, 0.8"
 SimpleWeightedGraphs = "1.1"
 StatsBase = "< 0.33.21"
 Suppressor = "0.1.0 - 0.2.0"
@@ -61,7 +62,6 @@ TensorBoardLogger = "< 0.1.19"
 XML = "0.2.0"
 Zygote = "0.6.26"
 julia = "1.8 - 1.9"
-JSON = "0.21.4"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
