--- a/Project.toml
+++ b/Project.toml
@@ -47,7 +47,8 @@ Distributions = "0.24 - 0.25"
 FillArrays = "0.11 - 0.12"
 Flux = "0.11 - 0.12"
 Graphs = "1 - 1.7.4"
-KernelAbstractions = "< 0.8.4"
+JSON = "0.21.4"
+KernelAbstractions = "< 0.8.4, 0.9"
 LightGraphs = "1.3"
 NNlib = "0.8.4"
 ProgressBars = "1"
@@ -61,7 +62,6 @@ TensorBoardLogger = "< 0.1.19"
 XML = "0.2.0"
 Zygote = "0.6.26"
 julia = "1.8 - 1.9"
-JSON = "0.21.4"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
